--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  dio: 4.0.0
+  dio: ^4.0.0
+  curl_logger_dio_interceptor: ^0.0.3
   th_logger:
     git: https://github.com/tuanhwing/th_logger.git
 
