feat (device_info) : add device info into header for all requests

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   dio: ^4.0.6
   curl_logger_dio_interceptor: ^0.0.3
+  device_info_plus: ^9.0.0
+  package_info_plus: ^4.0.0
   th_logger:
     git: https://github.com/tuanhwing/th_logger.git
 
