fix (device_info) : set Android.uuid = App Set ID (ASID, on Android) & iOS.uuid = Identifier for Vendor (IDfV, on iOS)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   curl_logger_dio_interceptor: ^0.0.3
   device_info_plus: ^9.0.0
   package_info_plus: ^4.0.0
+  app_set_id: ^1.2.0
   th_logger:
     git: https://github.com/tuanhwing/th_logger.git
 
